--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     runtimeOnly 'ch.qos.logback:logback-classic:1.2.13'
+
+    // Apache Commons libraries
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
 }
 
 test {
